refactor: Exception throws 하지 않고 내부에서 catch하도록 수정
- 예외를 던져서 계속 전파되도록 하는 것보다 예외가 발생하는 부분에서 try-catch문으로 잡아 적절히 처리한다.
- 이렇게 수정하면 예외 발생 위치를 알 수 있으므로 더 명확하다.